welcome.lessons.welcome.array.island.Island.scala.error
island:10: error: not found: value map
		if(map(i-1) == 0 && map(i) != 0)
                   ^island:18: error: not found: value map
		if(map(i-1) != 0 && map(i) != 0)
                   ^island:20: error: not found: value map
			if(map(i-1) != map(i))
                           ^